syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.davinci.grpc.test";
option java_outer_classname = "Test";
option objc_class_prefix = "TST";

package daVinciRPC;

service SensorDataService {
    rpc GetSensorData(SensorRequest) returns (SensorResponse);
}

message SensorRequest {
    string sensor_id = 1;
}

message SensorResponse {
    string sensor_id = 1;
    double temperature = 2;
    double humidity = 3;
    int64 timestamp = 4;
}